--- a/game.css
+++ b/game.css
@@ -1,10 +1,25 @@
 
-body{ 
-    background-color: ;
+.body{ justify-content: center;width: 1500px; height: 50px; text-align: center; font-size: 25px;}}
+
+h1{color: white}
+#question{ font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-style: normal;
+ text-align: center; font-size: 25px;}
+
+h1{text-align: center;}
+#gameday{
+display: flex;
+    background-color: red; width: 1500px; height: 400px; ;
 }
 
-h1{color: red}
-#question{ font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-style: normal;
-font: color white}
 
-#gameday{ justify-content: right;}
+#question{
+    width: 1500px; height: 50px; text-align: center; font-size: 25px;}
+
+    #name{
+        width: 200px; height: 20px;}
+    #choices{ text-align: center;}
+    #timer{ text-align: center;font-size: larger; font-weight: 100;}
+    #button{ text-align: center; margin-bottom: 20px; margin-top: 20px;}
+    #play{ text-align: center;}
+    #entername{ text-align: center; margin-top: 20px;}
+    #textbox{ text-align: center; margin-top: 5px;}
